--- a/help/align.html
+++ b/help/align.html
@@ -1,3 +1,4 @@
 <html><h2>Image alignment</h2>
 
-Ticking <u>Align images?</u> will correct small xy drift due to acquisition by computing the translation coordinates for donor stack of images and applying it to both.
+Ticking <u>Align images?</u> will correct small xy drift due to acquisition by computing the translation coordinates for donor stack of images and applying it to both.<br>
+It is advised to check the result at the end of the clean step as it might fail for low contrast images or create a small drift for long stacks.
